--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script type="module" src="./assets/js/script.js"></script>
 
   <!-- 
     - ionicon link
