--- a/index.html
+++ b/index.html
@@ -897,7 +897,26 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getAuth } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
+    // Konfigurasi Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyBwNJqVJRs5R921h12ZKa8bYpPuZDcUJgw",
+  authDomain: "portfolio-fajar.firebaseapp.com",
+  projectId: "portfolio-fajar",
+  storageBucket: "portfolio-fajar.firebasestorage.app",
+  messagingSenderId: "828821200780",
+  appId: "1:828821200780:web:25f555b339eb34f04c40a9",
+    };
+
+    // Inisialisasi Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+</script>
 </body>
 
 </html>
