--- a/index.html
+++ b/index.html
@@ -58,10 +58,6 @@
 
       <div class="navbar-actions">
 
-        <select name="language" id="lang">
-          <option value="en">En</option>
-          <option value="ar">Ar</option>
-        </select>
 
         <button class="theme-btn" aria-label="Change Theme" title="Change Theme" data-theme-btn>
           <span class="icon"></span>
@@ -888,7 +884,9 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
   <!-- 
     - custom js link
   -->
-  <script type="module" src="./assets/js/script.js"></script>
+  <script type="module" src="script.js"></script>
+  <script type="module" src="firebase-messaging.js"></script>
+
 
   <!-- 
     - ionicon link
