--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
     - custom js link
   -->
   <script type="module" src="script.js"></script>
-  <script type="module" src="firebase-messaging.js"></script>
+  <script type="module" src="firebase-messaging-sw.js"></script>
 
 
   <!-- 
