--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
       });
   }
 </script>
-
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/firebase-messaging-sw.js')
+      .then(registration => {
+        console.log('Firebase Messaging SW berhasil didaftarkan dengan scope:', registration.scope);
+      })
+      .catch(error => {
+        console.error('Pendaftaran Service Worker gagal:', error);
+      });
+  }
+</script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -886,7 +896,6 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
   -->
   <script type="module" src="script.js"></script>
   <script type="module" src="firebase-messaging-sw.js"></script>
-
 
   <!-- 
     - ionicon link
