--- a/index.html
+++ b/index.html
@@ -895,8 +895,25 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
     - custom js link
   -->
   <script type="module" src="script.js"></script>
-  <script type="module" src="firebase-messaging-sw.js"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
 
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAQDMo-nCTNjYcb6oKI4LoJf5UarlyE3U0",
+      authDomain: "fajarportfolio-49b03.firebaseapp.com",
+      projectId: "fajarportfolio-49b03",
+      storageBucket: "fajarportfolio-49b03.firebasestorage.app",
+      messagingSenderId: "220469848492",
+      appId: "1:220469848492:web:03461dd9eb84a3a89d3209",
+      measurementId: "G-N3JP2HCLJY"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   <!-- 
     - ionicon link
   -->
