--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
               <ul class="contac-social-list">
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://www.facebook.com/fajar.krisdiantoro?mibextid=ZbWKwL" target="_blank" class="contact-social-link">
                     <div class="tooltip">Facebook</div>
 
                     <ion-icon name="logo-facebook"></ion-icon>
@@ -741,15 +741,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
-                    <div class="tooltip">Twitter</div>
-
-                    <ion-icon name="logo-twitter"></ion-icon>
-                  </a>
-                </li>
-
-                <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://www.linkedin.com/in/fajar-krisdiantoro-b06189291/" target="_blank" class="contact-social-link">
                     <div class="tooltip">Linkedin</div>
 
                     <ion-icon name="logo-linkedin"></ion-icon>
@@ -757,7 +749,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://youtube.com/@fajarkrisdiantoro5164?si=Grzff-zuMceZodiu" target="_blank" class="contact-social-link">
                     <div class="tooltip">Youtube</div>
 
                     <ion-icon name="logo-youtube"></ion-icon>
@@ -881,7 +873,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
   <!-- 
     - custom js link
   -->
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
   
   <!-- 
     - ionicon link
