--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ Hi! I’m Fajar Krisdiantoro. I work in a printing business, offer phone repair 
   <!-- 
     - custom js link
   -->
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
   
   <!-- 
     - ionicon link
